[package]
name = "mx-meetup-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
embassy-usb = "0.2.0"
embedded-io-async = "0.6.1"
heapless = "0.8.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
cyw43 = {version = "0.2.0", features = ["defmt", "firmware-logs"]}
