[package]
name = "mx-meetup-lib"
version = "0.1.0"
edition = "2021"

[dependencies]

embassy-executor = { version = "0.6.0", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread", "task-arena-size-32768"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "time-driver"] }
# embassy-usb = {version="0.2.0", features = ["defmt"]}
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6"] }
embassy-futures = "0.1.0"
# embassy-usb-logger = "0.2.0"
embassy-sync = "0.6.0"

defmt = "0.3.8"
defmt-rtt = "0.4.1"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

heapless = {version = "0.7.17"}
log = "0.4.22"
embedded-io-async = "0.6.1"
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
cyw43 = {version = "0.2.0", features = ["defmt", "firmware-logs"]}
cyw43-pio = {version = "0.2.0", features = ["defmt"]}
rand = {version = "0.8.5", default-features = false}
embassy-net-driver-channel = "0.3.0"
rust-mqtt = { version = "0.3.0", default-features = false, features = ["defmt"] }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = {version = "0.6.0", features = ["defmt"]}
postcard = {version = "1.0.10"}
defmt-serial = "0.10.0"
